# cybersaathi

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LLM_INTAKE_SPEC.md  README.md  compose.yaml  details.md  pyproject.toml  skills-lock.json
apps/api/: alembic.ini  pyproject.toml  run_api.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_all_tables.py  0002_llm_intake.py  0003_post_report_workflows.py  4cbf004da0bc_admin_portal_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/models/: __init__.py  db.py  llm_intake.py
apps/api/app/routers/: __init__.py  admin.py  clusters.py  complaints.py  dashboards.py  evidence.py  fall_back.py  intake.py  intake_chat.py  integrations.py  map.py  post_report.py  similarity.py  tts.py
apps/api/app/seed/: __init__.py  __main__.py  seed_postgres.py
apps/api/app/services/: __init__.py  admin_auth.py  categories.py  clusters.py  database.py  db_store.py  documents.py  extraction.py  fall_back.py  intake.py  integrations.py  intelligence_map.py  recovery.py  redaction.py  routing.py  seed_loader.py  similarity.py
apps/api/app/services/llm/: __init__.py  provider.py
apps/api/app/services/llm_intake/: __init__.py  guardrails.py  orchestrator.py  reducer.py
apps/api/app/services/post_report/: generator.py  workflow_selector.py
apps/api/app/services/repositories/: __init__.py  base.py  cluster.py  complaint.py  (+6 more)
apps/api/app/tests/: __init__.py  test_documents.py  test_incident_at.py  test_intelligence_map.py  test_post_report.py  test_redaction.py  test_routing.py  test_seed_and_accountability.py
(+148 files in other folders)
