[project]
name = "cybersaathi-api"
version = "0.1.0"
description = "CyberSaathi FastAPI backend (simulated integrations only)."
requires-python = ">=3.11"
dependencies = [
    "cybersaathi-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.2",
    "openai>=1.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
cybersaathi-shared = { workspace = true }

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = [".", "../..", "../../packages"]

[tool.uv]
package = false
